--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-     "element-ui": "^1.0.0",
+    "axios": "^0.15.3",
+    "configuration": "^0.1.1",
+    "element-ui": "^1.0.0",
     "vue": "^2.3.3",
     "vue-router": "^2.6.0"
   },
